--- a/src/MobileLandingPage/style.css
+++ b/src/MobileLandingPage/style.css
@@ -77,7 +77,7 @@
   font-family: "Inter-SemiBold", Helvetica;
   font-size: 46px;
   font-weight: 600;
-  left: 35px;
+  left: 25px;
   letter-spacing: 0;
   line-height: normal;
   position: absolute;
@@ -86,7 +86,7 @@
   width: 300px;
 }
 
-.mobile-landing-page .title-wrapper .text-gradient {
+.mobile-landing-page .text-gradient {
   background-image: linear-gradient(
     90deg,
     rgb(9, 216, 253) 0%,
@@ -104,7 +104,7 @@
   font-family: "Inter-SemiBold", Helvetica;
   font-size: 20px;
   font-weight: 600;
-  left: 35px;
+  left: 25px;
   letter-spacing: 0;
   line-height: normal;
   position: absolute;
@@ -123,11 +123,10 @@
   );
   border-radius: 40px;
   filter: blur(50px);
-  height: 185px;
-  left: 64px;
+  height: 20%;
   position: absolute;
-  top: 605px;
-  width: 265px;
+  top: 70%;
+  width: 100%;
 }
 
 .mobile-landing-page .tempimagewcod {
@@ -640,7 +639,7 @@
   height: 225px;
   left: 0;
   position: absolute;
-  top: 135px;
+  top: 50%;
   width: 393px;
 }
 
@@ -739,9 +738,9 @@
 
 .mobile-landing-page .arrow-3 {
   height: 15px;
-  left: 7px;
+  left: 40%;
   position: absolute;
-  top: 5px;
+  top: 33%;
   transform: rotate(-90deg);
   width: 11px;
 }
@@ -749,7 +748,7 @@
 .mobile-landing-page .ellipse-3 {
   border: 3px solid;
   border-color: #ffffff;
-  border-radius: 12.81px;
+  border-radius: 100%;
   height: 26px;
   left: 0;
   position: absolute;
@@ -768,9 +767,9 @@
 
 .mobile-landing-page .arrow-4 {
   height: 15px;
-  left: 7px;
+  left: 40%;
   position: absolute;
-  top: 6px;
+  top: 33%;
   transform: rotate(-90deg);
   width: 11px;
 }
@@ -783,11 +782,25 @@
   width: 115px;
 }
 
+.mobile-landing-page .content-wrapper {
+  color: #ffffff;
+  font-family: "Inter-SemiBold", Helvetica;
+  font-size: 20px;
+  font-weight: 600;
+  left: 25px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  text-align: left;
+  width: 300px;
+  top: 5%;
+}
+
 .mobile-landing-page .overlap-8 {
   background: conic-gradient(
-    from 180deg at 50% 50%,
+    from 180deg at 100% 0%,
     rgb(255, 192, 0) 41.4deg,
-    rgb(56, 177, 92) 99deg,
+    rgb(56, 177, 92) 110deg,
     rgb(118, 140, 79) 176.4deg
   );
   border-radius: 256px;
