--- a/src/MobileLandingPage/style.css
+++ b/src/MobileLandingPage/style.css
@@ -129,7 +129,7 @@
   width: 100%;
 }
 
-.mobile-landing-page .tempimagewcod {
+.mobile-landing-page .tempimage-3 {
   height: 443px;
   left: 0;
   object-fit: cover;
@@ -138,7 +138,7 @@
   width: 383px;
 }
 
-.mobile-landing-page .tempimagewcod-2 {
+.mobile-landing-page .tempimage-2 {
   height: 443px;
   left: 17px;
   object-fit: cover;
@@ -377,8 +377,8 @@
   width: 394px;
 }
 
-.mobile-landing-page .tempimagebjyne {
-  height: 614px;
+.mobile-landing-page .tempimage {
+  max-height: 614px;
   left: 81px;
   object-fit: cover;
   position: absolute;
@@ -386,7 +386,7 @@
   width: 313px;
 }
 
-.mobile-landing-page .tempimagebjyne-2 {
+.mobile-landing-page .tempimage-2 {
   height: 614px;
   left: 1px;
   object-fit: cover;
@@ -395,7 +395,7 @@
   width: 310px;
 }
 
-.mobile-landing-page .tempimagescbhw {
+.mobile-landing-page .tempimage-3 {
   height: 587px;
   left: 1px;
   object-fit: cover;
@@ -709,6 +709,52 @@
 .mobile-landing-page .overlap-7 {
   height: 164px;
   position: relative;
+}
+
+@keyframes slide {
+  from {
+    transform: translateX(0);
+  } 
+  to {
+    transform: translateX(-100%);
+  }
+}
+
+.sliderContainer {
+  overflow: hidden;
+  padding: 60px 0;
+  white-space: nowrap;
+  position: absolute;
+  top: 3rem;
+}
+
+.logoSlider {
+  display: inline-block;
+  animation: 15s slide infinite linear;
+}
+
+.logo {
+  width: 70px;
+  margin: 0 40px;
+  vertical-align: middle;
+}
+
+.card {
+  /* Add shadows to create the "card" effect */
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+}
+.card img {
+  width: 100%;
+}
+/* On mouse-over, add a deeper shadow */
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+/* Add some padding inside the card container */
+.container {
+  padding: 2px 16px;
 }
 
 .mobile-landing-page .rectangle-8 {
